change guard strategy and some improvments
